# quorum

./: .gitignore  README.md  pyproject.toml
src/quorum/: quorum.py
